Sun Sep 10 arton
 *test.rb
	add a test of return type is an object wrapped an array
 *Test.java
	add a method that returns an object wrapped an array
 *rjb.c
	check array-mark in jv2rv for returned object was an array
Tue Aug 1 arton
 *load.c
 *rjb.c
	change load pathname of the bridge class.
 *post-install.rb
	add for remove previous installed rjb.so.
 *rjb.rake
	add for build Gem.
 *rjb.rb	
	for preparing the pathname constant of the bridge class.
 *depend
	chage binary name from rjb.so to rjbcore.so
 *extconf.rb
	chage binary name from rjb.so to rjbcore.so
	
Mon Jul 31 arton
 *load.c
	fix buffer allocation

Sun Jul 16 (Jun 22) Kuwashima and arton
 *rjb.c
	version 0.2.8
 *MANIFEST
 *depend	
 *load.c
 *rjbexception.c
	change jni.h to jniwrap.h.
	change the bridge class's header according to JDK 5.0's javah.
 *jniwrap.h
	wrap jni.h for Cygin
	
Sat Jun 10 14:10:05 2006 arton
 *rjb.c
   	version 0.2.7
	support an array of arrays from ruby to java.

Mon May 8 08:52:12 2006 arton
 *load.c
	revision 5
	support both Intel and PPC Mac.
	Patched version was contributed by Demetrius Nunes.

Wed Apr 12 03:57:12 2006 arton
 *rjb.c
	version 0.2.6
	support an array of arrays.
 *test.rb	
	add an array of arrays test, some tests are contributed by Darren Day.
 *Test.java
	add a test method that returns an array of arrays, some tests are
         contributed by Darren Day.
	
Sat Dec 24 18:56:38 2005 arton
 *rjb.c
	version 0.2.5
	release String, Float, Array object after method call.
 *gctest.rb
	add for String object gc test
	
Mon Sep 19 01:09:30 2005 arton
 *rjb.c
	version 0.2.4
	use null instead of empty string when String argument is nil
	omit unused local variable from jstring2val
 *test.rb
	add null string test (bug since utf-8 support)
	
Tue Jun 28 01:57:07 2005 arton
 *rjb.c
	version 0.2.3
	convert result object to imported class if object is an instance of Class
	call Class#forName if argument count is 1
 *test.rb
	add test_importobj contributed by Mr. Kuwashima, thanks.
	