@@ -12,7 +12,7 @@
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
  * Lesser General Public License for more details.
  *
- * $Id: riconv.c 2 2006-04-11 19:04:40Z arton $
+ * $Id$
  */
 
 #include "ruby.h"
