@@ -1,4 +1,4 @@
-// $Id: Base.java 2 2006-04-11 19:04:40Z arton $
+// $Id$
 // this test class was taken from Mr. Micael Weller's bug report
 package jp.co.infoseek.hp.arton.rjb;
 
